--- a/.github/workflows/auto-cleanup.yml
+++ b/.github/workflows/auto-cleanup.yml
@@ -1,4 +1,18 @@
-name: AccurateCleanup
+def get_file_commit_time(filepath):
+            """Get the exact time when file was last committed in UTC"""
+            try:
+                # Get commit time in ISO format with timezone
+                result = subprocess.run(
+                    ['git', 'log', '-1', '--format=%aI', '--', filepath],
+                    capture_output=True,
+                    text=True,
+                    check=True
+                )
+                commit_time_str = result.stdout.strip()
+                if commit_time_str:
+                    # Parse with timezone info
+                    from datetime import timezone
+                    dt = datetime.fromisoformat(name: AccurateCleanup
 
 on:
   push:
